# world_models

./: .gitignore  README.md  gradio_demo.py  infer_multi_gpu.py  infer_single_gpu.py  pyproject.toml  requirements.txt
assets/testcases/: README.md
assets/testcases/i2i/: i2i.json
assets/testcases/r2v/: r2v.json
assets/testcases/rv2v/: rv2v_case1.json  rv2v_case2.json
assets/testcases/t2i/: t2i.json
assets/testcases/t2v/: t2v.json
assets/testcases/v2v/: v2v_case1.json  v2v_case2.json  (+1 more)
bernini/: cli.py  data_utils.py  pipeline.py  prompt_enhancer.py  weights.py
bernini/data/: bernini_process.py  bernini_template.py
bernini/models/: bernini.py  diffloss_fm.py  modeling_qwen2_5_vl.py  renderer.py  transformer_wan.py  wan_diffusion.py
c/: .gitignore  Makefile  README.md
c/include/: bernini.h
c/src/: attention.c  attention.h  bjson.c  bjson.h  bt.c  bt.h  data_utils.c  data_utils.h  guidance.c  guidance.h  main.c  media.c  media.h  pipeline.c  rng.c  rng.h  safetensors.c  safetensors.h  scheduler.c  scheduler.h  tokenizer.c  tokenizer.h  transformer_wan.c  transformer_wan.h  umt5.c  umt5.h  wan_diffusion.c  wan_diffusion.h  wan_vae.c  wan_vae.h
c/tests/: test_core.c
configs/bernini/: config.json
configs/bernini_renderer_wan21_1p3b/: config.json
configs/bernini_renderer_wan22/: config.json
docs/: bernini.md  bernini_r.md
scripts/bernini/: run_gradio.sh  run_i2i.sh  run_r2v.sh  run_rv2v.sh  run_t2i.sh  run_t2v.sh  run_v2v.sh
scripts/bernini_r/: run_gradio.sh  run_i2i.sh  run_r2v.sh  run_rv2v.sh  run_t2i.sh  run_t2v.sh  run_v2v.sh
(+2 files in other folders)
